--- a/src/profilePage/ProfilePage.css
+++ b/src/profilePage/ProfilePage.css
@@ -32,7 +32,8 @@
 
 @media (max-width: 768px) {
     .profile-page {
-        height: 100vh;
-        padding-bottom: 5rem;
+        height: 50vh;
+        min-height: 300px;
+        padding-bottom: 0;
     }
 }
